[package]
name = "byte-anime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.14"
indicatif = "0.16"